# TwitterBot

./: .gitignore  API.hs  Operations.hs  README.md  Settings.hs  TwitterBot.cabal  TwitterBot.sh  Util.hs  main.hs
app/: Main.hs
src/: API.hs  Application.hs  Operations.hs  Settings.hs  Util.hs
