name:                TwitterBot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/yamato1007/TwitterBot#README.md
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     API
                     , Application
                     , Operations
                     , Settings
                     , Util
  build-depends:       base >= 4.7 && < 5
                     , random
                     , bytestring
                     , time
                     , regex-posix
                     , containers
                     , utf8-string
                     , text
                     , regex-posix
                     , http-conduit
                     , authenticate-oauth
                     , aeson
  default-language:    Haskell2010

executable TwitterBot
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , TwitterBot
  default-language:    Haskell2010

test-suite TwitterBot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , TwitterBot
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/yamato1007/TwitterBot
